# narva-queue

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260226_0001_create_captures.py
narva_queue/: __init__.py  config.py
narva_queue/camera/: __init__.py  balticlivecam.py  exceptions.py
narva_queue/db/: __init__.py  base.py  models.py  session.py
narva_queue/detection/: __init__.py  yolo.py
narva_queue/service/: __init__.py  ingest.py  retention.py
narva_queue/web/: app.py
narva_queue/web/templates/: base.html  capture_detail.html  captures.html  dashboard.html  plots.html
narva_queue/worker/: main.py
scripts/: count_people.py  get_one_jpeg.py
tests/: test_balticlivecam.py  test_balticlivecam_live.py  test_count_people_script.py  test_get_one_jpeg_script.py
